--- a/package.json
+++ b/package.json
@@ -10,11 +10,10 @@
     "format": "prettier --ignore-path .gitignore --write \"**/*.{js,ts,tsx}\""
   },
   "dependencies": {
-    "@fedibtc/tailwind-theme": "^1.0.3",
-    "@fedibtc/ui": "1.1.1",
+    "@fedibtc/tailwind-theme": "1.0.3",
+    "@fedibtc/ui": "^1.2.1",
     "@hookform/resolvers": "^3.3.2",
     "@radix-ui/react-select": "^2.0.0",
-    "@tanstack/react-query": "^5.4.3",
     "@vercel/analytics": "^1.1.1",
     "next": "14.1.0",
     "react": "^18",
