--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@hookform/resolvers": "^3.3.2",
     "@radix-ui/react-select": "^2.0.0",
     "@vercel/analytics": "^1.1.1",
+    "axios": "^1.7.2",
     "next": "14.1.0",
     "react": "^18",
     "react-dom": "^18",
