--- a/package.json
+++ b/package.json
@@ -14,14 +14,23 @@
     "@fedibtc/ui": "^1.2.1",
     "@hookform/resolvers": "^3.3.2",
     "@radix-ui/react-select": "^2.0.0",
+    "@types/ws": "^8.5.11",
     "@vercel/analytics": "^1.1.1",
+    "@vulpemventures/secp256k1-zkp": "^3.2.1",
     "axios": "^1.7.2",
     "next": "14.2.5",
+    "bitcoinjs-lib": "^6.1.6",
+    "bolt11": "^1.4.1",
+    "boltz-core": "^2.1.2",
+    "crypto": "^1.0.1",
+    "ecpair": "^2.1.0",
     "react": "^18",
     "react-dom": "^18",
     "react-qr-code": "^2.0.12",
     "tailwindcss-animate": "^1.0.7",
+    "tiny-secp256k1": "^2.2.3",
     "webln": "^0.3.2",
+    "ws": "^8.18.0",
     "zod": "^3.22.4"
   },
   "devDependencies": {
