--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-qr-code": "^2.0.12",
+    "react-tailwind-variants": "^1.0.2",
     "tailwindcss-animate": "^1.0.7",
     "tiny-secp256k1": "^2.2.3",
     "webln": "^0.3.2",
