--- a/package.json
+++ b/package.json
@@ -19,12 +19,13 @@
     "@vercel/analytics": "^1.1.1",
     "@vulpemventures/secp256k1-zkp": "^3.2.1",
     "axios": "^1.7.2",
-    "next": "14.2.5",
     "bitcoinjs-lib": "^6.1.6",
     "bolt11": "^1.4.1",
     "boltz-core": "^2.1.2",
+    "clsx": "^2.1.1",
     "crypto": "^1.0.1",
     "ecpair": "^2.1.0",
+    "next": "14.2.5",
     "react": "^18",
     "react-dom": "^18",
     "react-qr-code": "^2.0.12",
