--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@fedibtc/ui": "^1.2.1",
     "@hookform/resolvers": "^3.3.2",
     "@radix-ui/react-select": "^2.0.0",
+    "@radix-ui/react-tabs": "^1.1.0",
     "@types/ws": "^8.5.11",
     "@vercel/analytics": "^1.1.1",
     "@vulpemventures/secp256k1-zkp": "^3.2.1",
@@ -22,7 +23,6 @@
     "bitcoinjs-lib": "^6.1.6",
     "bolt11": "^1.4.1",
     "boltz-core": "^2.1.2",
-    "clsx": "^2.1.1",
     "crypto": "^1.0.1",
     "ecpair": "^2.1.0",
     "next": "14.2.5",
