--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "NODE_ENV=development next dev",
-    "build": "next build",
+    "build": "next build && bun copy-wasm.ts",
     "start": "NODE_ENV=production next start",
     "lint": "tsc --noEmit && next lint",
     "format": "prettier --ignore-path .gitignore --write \"**/*.{js,ts,tsx}\""
