--- a/package.json
+++ b/package.json
@@ -5,12 +5,13 @@
   "type": "module",
   "scripts": {
     "dev": "NODE_ENV=development next dev",
-    "build": "next build && bun copy-wasm.ts",
+    "build": "next build",
     "start": "NODE_ENV=production next start",
     "lint": "tsc --noEmit && next lint",
     "format": "prettier --ignore-path .gitignore --write \"**/*.{js,ts,tsx}\""
   },
   "dependencies": {
+    "@bitcoinerlab/secp256k1": "^1.1.1",
     "@fedibtc/tailwind-theme": "1.0.3",
     "@fedibtc/ui": "^1.2.1",
     "@hookform/resolvers": "^3.3.2",
@@ -31,7 +32,6 @@
     "react-qr-code": "^2.0.12",
     "react-tailwind-variants": "^1.0.2",
     "tailwindcss-animate": "^1.0.7",
-    "tiny-secp256k1": "^2.2.3",
     "webln": "^0.3.2",
     "ws": "^8.18.0",
     "zod": "^3.22.4"
