--- a/package.json
+++ b/package.json
@@ -14,16 +14,14 @@
     "@bitcoinerlab/secp256k1": "^1.1.1",
     "@fedibtc/tailwind-theme": "1.0.3",
     "@fedibtc/ui": "^1.2.1",
-    "@hookform/resolvers": "^3.3.2",
     "@radix-ui/react-select": "^2.0.0",
     "@radix-ui/react-tabs": "^1.1.0",
-    "@types/ws": "^8.5.11",
-    "@vercel/analytics": "^1.1.1",
     "@vulpemventures/secp256k1-zkp": "^3.2.1",
     "axios": "^1.7.2",
     "bitcoinjs-lib": "^6.1.6",
     "bolt11": "^1.4.1",
     "boltz-core": "^2.1.2",
+    "browserify-fs": "^1.0.0",
     "crypto": "^1.0.1",
     "ecpair": "^2.1.0",
     "next": "14.2.5",
@@ -32,8 +30,6 @@
     "react-qr-code": "^2.0.12",
     "react-tailwind-variants": "^1.0.2",
     "tailwindcss-animate": "^1.0.7",
-    "webln": "^0.3.2",
-    "ws": "^8.18.0",
     "zod": "^3.22.4"
   },
   "devDependencies": {
