--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
   "dependencies": {
     "@bitcoinerlab/secp256k1": "^1.1.1",
     "@fedibtc/tailwind-theme": "1.0.3",
-    "@fedibtc/ui": "^1.2.1",
+    "@fedibtc/ui": "^1.2.3",
+    "@radix-ui/react-popover": "^1.1.2",
     "@radix-ui/react-select": "^2.0.0",
     "@radix-ui/react-tabs": "^1.1.0",
     "@vulpemventures/secp256k1-zkp": "^3.2.1",
@@ -30,6 +31,7 @@
     "react-qr-code": "^2.0.12",
     "react-tailwind-variants": "^1.0.2",
     "tailwindcss-animate": "^1.0.7",
+    "webln": "^0.3.2",
     "zod": "^3.22.4"
   },
   "devDependencies": {
