--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-dom": "^18",
     "react-qr-code": "^2.0.12",
     "react-tailwind-variants": "^1.0.2",
+    "simple-xml-to-json": "^1.2.3",
     "tailwindcss-animate": "^1.0.7",
     "webln": "^0.3.2",
     "zod": "^3.22.4"
