build: update deps and make direnv work

--- a/package.json
+++ b/package.json
@@ -12,8 +12,8 @@
   },
   "dependencies": {
     "@bitcoinerlab/secp256k1": "^1.1.1",
-    "@fedibtc/tailwind-theme": "1.0.3",
-    "@fedibtc/ui": "^1.2.3",
+    "@fedibtc/tailwind-theme": "^1.0.5",
+    "@fedibtc/ui": "^1.2.5",
     "@radix-ui/react-popover": "^1.1.2",
     "@radix-ui/react-tabs": "^1.1.0",
     "@vulpemventures/secp256k1-zkp": "^3.2.1",
@@ -24,7 +24,7 @@
     "browserify-fs": "^1.0.0",
     "crypto": "^1.0.1",
     "ecpair": "^2.1.0",
-    "next": "14.2.5",
+    "next": "14.2.34",
     "react": "^18",
     "react-dom": "^18",
     "react-qr-code": "^2.0.12",
