--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "myapp",
+  "name": "swap",
   "version": "0.1.0",
   "private": true,
   "type": "module",
   "scripts": {
-    "dev": "NODE_ENV=development next dev",
+    "dev": "NODE_ENV=development next dev -- -p 3026",
     "build": "next build",
     "start": "NODE_ENV=production next start",
     "lint": "tsc --noEmit && next lint",
